--- a/modules/2-V/day2.tex
+++ b/modules/2-V/day2.tex
@@ -3,6 +3,15 @@
 
 \begin{applicationActivities}{Day 2}
 
+\begin{activity}{15}
+  Let \(V=\{(a,b):a,b\text{ are real numbers}\}\), where \((a_1,b_1)+(a_2,b_2)=
+  (a_1+b_1+a_2+b_2,b_1^2+b_2^2)\) and \(c(a,b)=(a^c,b+c)\). Show that
+  this is not a vector space by finding a combination of vectors and scalars
+  that do not satisfy one of the vector space properties.
+
+  \vectorSpaceProperties
+\end{activity}
+
 \begin{remark}
   The following sets are examples of vector spaces, with the usual/natural
   operations for addition and scalar multiplication.
@@ -19,7 +28,7 @@
 \end{remark}
 
 \begin{activity}{10}
-  Prove that \(\P^2\) satisfies the \textit{commutative addition} property
+  Prove that \(\P^2\) satisfies the \textbf{addition commutivity} property
   of vector spaces,
   by showing that if \(f(x)=a_1x^2+b_1x+c_1\) and \(g(x)=a_2x^2+b_2x+c_2\),
   then \(f(x)+g(x)=g(x)+f(x)\).
