--- a/tbil-la.sty
+++ b/tbil-la.sty
@@ -129,7 +129,6 @@ Choose the most appropriate response for each question.
   \array{#1}}
 \makeatother
 
-%Why is this here? DL
 \newcommand{\term}{\textbf}
 
 \newcommand{\systemWithOneSolutionA}{
@@ -167,3 +166,44 @@ Choose the most appropriate response for each question.
 \end{tikzpicture}
 }
 
+\newcommand{\vectorSpaceProperties}{
+\begin{multicols}{2}
+\begin{itemize}
+  % \item \textbf{Well-defined addition.}
+  %
+  %       \(\vect v+\vect w\) belongs to \(V\).
+  \item \textbf{Addition associativity.}
+
+        \(\vect u+(\vect v+\vect w)=
+        (\vect u+\vect v)+\vect w\).
+  \item \textbf{Addition commutivity.}
+
+        \(\vect u+\vect v=
+        \vect v+\vect u\).
+  \item \textbf{Addition identity.}
+
+        There exists some \(\vect 0\)
+        where \(\vect v+\vect 0=\vect v\).
+  \item \textbf{Addition inverse.}
+
+        There exists some \(-\vect v\)
+        where \(\vect v+(-\vect v)=\vect 0\).
+  % \item \textbf{Well-defined scalar multipication.}
+  %
+  %       \(a\vect v\) belongs to
+  %       \(V\).
+  \item \textbf{Scalar multiplication associativity.}
+
+        \(a(b\vect v)=(ab)\vect v\).
+  \item \textbf{Scalar multiplication identity.}
+
+        \(1\vect v=\vect v\).
+  \item \textbf{Scalar distribution.}
+
+        \(a(\vect u+\vect v)=a\vect u+a\vect v\).
+  \item \textbf{Vector distribution.}
+
+        \((a+b)\vect v=a\vect v+b\vect v\).
+\end{itemize}
+\end{multicols}
+}
