completed 2nd module

--- a/modules/2-V/index.tex
+++ b/modules/2-V/index.tex
@@ -19,5 +19,6 @@
 \input{modules/2-V/day1.tex}
 \input{modules/2-V/day2.tex}
 \input{modules/2-V/day3.tex}
+\input{modules/2-V/day4.tex}
 
 \end{module}
