--- a/reassessment_form.tex
+++ b/reassessment_form.tex
@@ -17,7 +17,7 @@
 \end{center}
 
 
-	
+
 \vspace{0.2in}
 
 \begin{flushleft}
@@ -29,12 +29,14 @@
 \vspace{0.15in}
 {\bf Assessment on which you earned \ifbool{TR}{an R}{a !}: } \underline{\phantom{xxxxxxxxxxxxxxxxxxxxxxxxxxxxx}} \\
 \vspace{0.15in}
-{\bf Result of reassessment: } \underline{\phantom{xxxxxxxxxxxxxxxxxxxxxxx}} \\
-\vspace{0.15in}
 {\bf List of practice problems worked: } \\
 \vspace{0.4in}
 Use this space to show your work on at least {\bf three} practice problems.  Use the back and/or attach additional pages as necessary.
 
+\vfill
+
+\vspace{0.15in}
+{\bf Result of reassessment: } \underline{\phantom{xxxxxxxxxxxxxxxxxxxxxxx}} \\
 
 \end{flushleft}
 
