--- a/modules/2-V/day2.tex
+++ b/modules/2-V/day2.tex
@@ -3,15 +3,6 @@
 
 \begin{applicationActivities}{Day 2}
 
-\begin{activity}{15}
-  Let \(V=\{(a,b):a,b\text{ are real numbers}\}\), where \((a_1,b_1)+(a_2,b_2)=
-  (a_1+b_1+a_2+b_2,b_1^2+b_2^2)\) and \(c(a,b)=(a^c,b+c)\). Show that
-  this is not a vector space by finding a combination of vectors and scalars
-  that do not satisfy one of the vector space properties.
-
-  \vectorSpaceProperties
-\end{activity}
-
 \begin{remark}
   The following sets are examples of vector spaces, with the usual/natural
   operations for addition and scalar multiplication.
@@ -27,11 +18,13 @@
   \end{itemize}
 \end{remark}
 
-\begin{activity}{10}
-  Prove that \(\P^2\) satisfies the \textbf{addition commutivity} property
-  of vector spaces,
-  by showing that if \(f(x)=a_1x^2+b_1x+c_1\) and \(g(x)=a_2x^2+b_2x+c_2\),
-  then \(f(x)+g(x)=g(x)+f(x)\).
+\begin{activity}{15}
+  Let \(V=\{(a,b):a,b\text{ are real numbers}\}\), where \((a_1,b_1)+(a_2,b_2)=
+  (a_1+b_1+a_2+b_2,b_1^2+b_2^2)\) and \(c(a,b)=(a^c,b+c)\). Show that
+  this is not a vector space by finding a counterexample
+  that does not satisfy one of the vector space properties.
+
+  \vectorSpaceProperties
 \end{activity}
 
 \begin{definition}
@@ -153,30 +146,6 @@
     \(\vspan\left\{\begin{bmatrix}1\\0\\-3\end{bmatrix},
     \begin{bmatrix}-1\\-3\\2\end{bmatrix}\right\}\)?
   \end{subactivity}
-\end{activity}
-
-%TODO add an example not belonging to span
-
-\begin{fact}
-  A vector \(\vect b\) belongs to
-  \(\vspan\{\vect v_1,\dots,\vect v_n\}\) if and only if
-  the linear system corresponding to
-  \([\vect v_1\,\dots\,\vect v_n \,|\, \vect b]\)
-  is consistent.
-\end{fact}
-
-\begin{remark}
-  To determine if \(\vect b\) belongs to
-  \(\vspan\{\vect v_1,\dots,\vect v_n\}\), find
-  \(\RREF[\vect v_1\,\dots\,\vect v_n \,|\, \vect b]\).
-\end{remark}
-
-\begin{activity}{5}
-  Determine if
-  \(\begin{bmatrix}3\\-2\\1\end{bmatrix}\) belongs to
-  \(\vspan\left\{\begin{bmatrix}1\\0\\-3\end{bmatrix},
-  \begin{bmatrix}-1\\-3\\2\end{bmatrix}\right\}\)
-  by row-reducing an appropriate matrix.
 \end{activity}
 
 
