--- a/modules/2-V/day3.tex
+++ b/modules/2-V/day3.tex
@@ -3,6 +3,36 @@
 
 \begin{applicationActivities}{Day 3}
 
+\begin{fact}
+  A vector \(\vect b\) belongs to
+  \(\vspan\{\vect v_1,\dots,\vect v_n\}\) if and only if
+  the linear system corresponding to
+  \([\vect v_1\,\dots\,\vect v_n \,|\, \vect b]\)
+  is consistent.
+\end{fact}
+
+\begin{remark}
+  To determine if \(\vect b\) belongs to
+  \(\vspan\{\vect v_1,\dots,\vect v_n\}\), find
+  \(\RREF[\vect v_1\,\dots\,\vect v_n \,|\, \vect b]\).
+\end{remark}
+
+\begin{activity}{5}
+  Determine if
+  \(\begin{bmatrix}3\\-2\\1\end{bmatrix}\) belongs to
+  \(\vspan\left\{\begin{bmatrix}1\\0\\-3\end{bmatrix},
+  \begin{bmatrix}-1\\-3\\2\end{bmatrix}\right\}\)
+  by row-reducing an appropriate matrix.
+\end{activity}
+
+\begin{activity}{5}
+  Determine if
+  \(\begin{bmatrix}-1\\-9\\0\end{bmatrix}\) belongs to
+  \(\vspan\left\{\begin{bmatrix}1\\0\\-3\end{bmatrix},
+  \begin{bmatrix}-1\\-3\\2\end{bmatrix}\right\}\)
+  by row-reducing an appropriate matrix.
+\end{activity}
+
 
 \begin{observation}
   So far we've only discussed linear combinations of Euclidean vectors.
@@ -31,68 +61,14 @@
   \(\vspan\{-3+i,6-2i\}\)?
 \end{activity}
 
-\begin{definition}
-  A subset of a vector space is called a \term{subspace} if it contains
-  all of its own linear combinations. Every subspace is itself a vector space.
-\end{definition}
-
-\begin{fact}
-  If \(S\) is a subset of a vector space \(V\), then
-  \(\vspan S\) is a subspace of \(V\).
-\end{fact}
-
-\begin{remark}
-  To prove that a subset is a subspace, you only need to check that
-  \(c\vect v+d\vect w\) belongs to the subset for any choice of
-  vectors \(\vect v,\vect w\) from the subset and any real scalars \(c,d\).
-\end{remark}
+\begin{activity}{10}
+  How many vectors are required to span \(\IR^2\)?
+  Sketch a drawing in the \(xy\) plane to support your guess.
+\end{activity}
 
 \begin{activity}{5}
-  Prove that \(P=\{ax^2+b:a,b\text{ are both real numbers}\}\) is a subspace
-  of the vector space of all degree-two polynomials by showing that
-  \(c(a_1x^2+b_1)+d(a_2x^2+b_2)\) belongs to \(P\).
+  How many vectors are required to span \(\IR^3\)?
 \end{activity}
-
-\begin{activity}{10}
-  Consider the subset of \(\IR^2\) where at least one coordinate on
-  each vector is \(0\).
-  \begin{center}
-    \begin{tikzpicture}[scale=0.25]
-    \draw[thin,gray,<->] (-5,0) -- (5,0);
-    \draw[thin,gray,<->] (0,-5) -- (0,5);
-    \draw[thick,blue] (-4.8,0) -- (4.8,0);
-    \draw[thick,blue] (0,-4.8) -- (0,4.8);
-    \end{tikzpicture}
-  \end{center}
-  \begin{subactivity}
-  Sketch a picture that demonstrates why this is not a subspace of \(\IR^2\).
-  \end{subactivity}
-  \begin{subactivity}
-    Define an explicit example of a linear combination
-    \(c\begin{bmatrix}v_1\\v_2\end{bmatrix}+
-    d\begin{bmatrix}w_1\\w_2\end{bmatrix}\) that does not
-    belong to this subset.
-  \end{subactivity}
-\end{activity}
-
-\begin{fact}
-  Suppose a subset \(S\) of \(V\) is isomorphic to another vector space
-  \(W\).
-  Then \(S\) is a subspace of \(V\).
-\end{fact}
-
-\begin{activity}{10}
-  Show that the upper triangular matrices
-  \[U^{2\times 2}=
-    \left\{
-    \begin{bmatrix}a&b\\0&c\end{bmatrix} :
-    a,b,c\text{ are real numbers}
-    \right\}
-  \]
-  form a subspace of \(\IR^{2\times 2}\) by finding a Euclidean
-  space isomorphic to \(U^{2\times 2}\).
-\end{activity}
-
 
 
 \end{applicationActivities}
