define linear (in)dependence

--- a/modules/3-R/day1.tex
+++ b/modules/3-R/day1.tex
@@ -3,6 +3,28 @@
 
 \begin{applicationActivities}{Day 1}
 
+\begin{activity}{15}
+  In the previous module, we considered
+  \[S=\left\{
+  \begin{bmatrix}2\\3\\0\\-1\end{bmatrix},
+  \begin{bmatrix}2\\0\\0\\3\end{bmatrix},
+  \begin{bmatrix}3\\13\\7\\16\end{bmatrix},
+  \begin{bmatrix}-1\\10\\7\\14\end{bmatrix},
+  \begin{bmatrix}4\\3\\0\\2\end{bmatrix}
+  \right\}
+  \]
+  and showed that \(\vspan S\not=\IR^4\). Find two vectors that
+  are in the span of the other three vectors.
 
+  \begin{TBLnote}
+    Actually, the activity involved the corresponding vectors in \(\P^3\).
+  \end{TBLnote}
+\end{activity}
+
+\begin{definition}
+  We say that a set of vectors is \term{linearly dependent} if one vector
+  in the set belongs to the span of the others. Otherwise, we say the set
+  is \term{linearly independent}.
+\end{definition}
 
 \end{applicationActivities}
