--- a/standards.tex
+++ b/standards.tex
@@ -16,7 +16,7 @@
 
 \begin{description}
 \item[How can we solve systems of linear equations?] \hfill
-\begin{enumerate}[{$\Box\ \Box$ \bf {E}1}]
+\begin{enumerate}[{$\Box\ \Box$ \bf {E}1.}]
 \item {\bf Systems as matrices}. I can translate back and forth between a system of linear equations and the corresponding augmented matrix.
 \item {\bf Row reduction}.  I can put a matrix in reduced row echelon form.
 \item {\bf Systems of linear equations}. I can solve a system of linear equations.
@@ -24,7 +24,7 @@
 \end{enumerate}
 
 \item[What is a vector space?] \hfill
-\begin{enumerate}[{$\Box\ \Box$ \bf {V}1}]
+\begin{enumerate}[{$\Box\ \Box$ \bf {V}1.}]
 \item {\bf Vector space}. I can determine if a set with given operations forms a vector space.
 \item {\bf Linear combinations}. I can determine if a vector can be written as a linear combination of a given set of vectors.
 \item {\bf Spanning sets}. I can determine if a set of vectors spans a vector space.
@@ -33,7 +33,7 @@
 \end{enumerate}
 
 \item [What structure do vector spaces have?] \hfill
-\begin{enumerate}[{$\Box\ \Box$ \bf {S}1}]
+\begin{enumerate}[{$\Box\ \Box$ \bf {S}1.}]
 
 \item {\bf Linear independence}. I can determine if a set of vectors is linearly dependent or independent.
 \item {\bf Basis verification}. I can determine if a set of vectors is a basis of a vector space.
@@ -42,7 +42,7 @@
 \end{enumerate}
 
 \item[How can we understand linear maps algebraically?] \hfill
-\begin{enumerate}[{$\Box\ \Box$ \bf {A}1}]
+\begin{enumerate}[{$\Box\ \Box$ \bf {A}1.}]
 \item {\bf Linear maps as matrices}.  I can write the matrix (with respect to the standard bases) corresponding to a linear transformation between Euclidean spaces.
 \item {\bf Linear map verification}. I can determine if a map between vector spaces is linear or not.
 \item {\bf Injectivity and surjectivity}.  I can determine if a given linear map is injective and/or surjective.
@@ -51,7 +51,7 @@
 
 
 \item[What algebraic structure do matrices have?] \hfill
-\begin{enumerate}[{$\Box\ \Box$ \bf {M}1}]
+\begin{enumerate}[{$\Box\ \Box$ \bf {M}1.}]
 \item {\bf Matrix Multiplication}. I can multiply matrices.
 \item {\bf Invertible Matrices}. I can determine if a square matrix is invertible or not.
 \item {\bf Matrix inverses}.  I can compute the inverse matrix of an invertible matrix.
@@ -59,7 +59,7 @@
 
 
 \item[How can we understand linear maps geometrically?] \hfill
-\begin{enumerate}[{$\Box\ \Box$ \bf {G}1}]
+\begin{enumerate}[{$\Box\ \Box$ \bf {G}1.}]
 \item {\bf Determinants}. I can compute the determinant of a square matrix.
 \item {\bf Eigenvalues}. I can find the eigenvalues of a square matrix, along with their algebraic multiplicities.
 \item {\bf Eigenvectors}. I can find the eigenspace of a square matrix associated to a given eigenvalue.
