beginnings of a slide builder factored out from notes builder

--- a/course-notes.tex
+++ b/course-notes.tex
@@ -1,6 +1,6 @@
 \documentclass{article}[12pt]
 
-\usepackage{tbil-la}
+\usepackage{course-notes}
 
 \begin{document}
 
@@ -14,7 +14,7 @@
 \input{modules/6-G/index.tex} % 4 days
 
 %Produces PDFs of readiness materials
-\immediate\write18{readiness.bash} 
+\immediate\write18{readiness.bash}
 
 
 
